# pallet_detection

./: CMakeLists.txt  README.md  package.xml
config/: icp_info.ini  merge_info.ini
launch/: pallet_detection.launch
rviz/: pallet_detection.rviz
src/: ground_removal_node.cpp  ground_removal_with_box_node.cpp  icp_alignment.cpp  merge_point_clouds.cpp  point_cloud_add_noise.cpp  point_cloud_plane_to_2d_image.cpp  pointcloud_vfh_visualizer.cpp  viz_saved_point_clouds.cpp
urdf/: depth_camera.urdf
worlds/: pallet_world.world
